# osss-ucx

./: .gitignore  configure.ac
.github/workflows/: build-and-test-osss-ucx.yml  build-hwloc.yml  build-osss-ucx.yml
config/m4/: ucc.m4
include/shmem/: api.h  api_types.h  generics.h
pkgconfig/: osss-ucx.pc.in
src/: Makefile.am
src/api/: Makefile.am  init.c
src/api/collectives/: collectives.h  defaults.h  shcoll-shim.c  table.c  table.h  ucc_coll.c  ucc_coll.h
src/api/collectives/ucc/: alltoall.c  alltoalls.c  barrier.c  broadcast.c  collect.c  fcollect.c  reduce.c  ucc.c  ucc.h
src/api/collectives/ucc/collectives/: alltoall.h  alltoalls.h  barrier.h  broadcast.h  collect.h  fcollect.h  reduce.h
src/api/rma/: put_signal.c  putget.c  putget.h  putget_complex.h
src/shcoll/: .gitignore
src/shcoll/src/: Makefile.am  alltoall.c  inscan.c  scan.c  shcoll.h
src/shcoll/src/shcoll/: inscan.h  scan.h
src/shmemc/: Makefile.am  env.c  init.c  osh_common.in  teams.c  thispe.h
src/shmemc/ucx/: pe.h
src/shmemu/: shmemu.h
src/ucc_coll/src/: Makefile.am  ucc_alltoall.c  ucc_coll.c  ucc_coll.h
src/ucc_coll/src/ucc_coll/: alltoalls.h  barrier.h  broadcast.h  collect.h  common.h  compat.h  fcollect.h  reduce.h  ucc_alltoall.h  ucc_gather.h
